# sentence-space

./: .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
back/: .env.example  .gitignore  Dockerfile  dev.py  docker-compose.yml  main.py  pyproject.toml
back/app/common/: __init__.py
back/app/common/database/: __init__.py  models.py  mongodb.py  neo4j_db.py
back/app/common/llm/: __init__.py  example_usage.py  openrouter.py
back/app/domains/: __init__.py
back/app/domains/clickup_demo/: README.md  __init__.py  routers.py
back/app/domains/multi_agent/: __init__.py
back/app/domains/notion_demo/: __init__.py  routers.py
back/data/sessions/: 090fcd7e-b98a-4645-8940-b16f2dd5263a.json  3f7c5853-5b2a-464d-85cb-d77f184b931c.json  5d1ba534-ae2b-4d3a-88e0-8306f1ba6259.json  6069eb39-f202-4390-af2a-ce521a9dd611.json  78a580da-c141-43a6-bc09-041ce63cfb11.json  aa76bc00-ad2d-48ae-8f0a-8d85bcf538fe.json  afa13303-6235-41ea-a098-2150795cdb19.json  cebbdf76-6033-46c1-98c1-8f25c1240f23.json  e90f9bd3-75a4-4870-88c9-8122efb13ba4.json  ea55d708-97ad-415c-a249-68c706c4e706.json  eaab40ae-b686-46bd-b981-0f69dc9f5840.json  edb67da4-6741-4183-b297-20034da9a8ea.json  f8b3774e-6e76-4188-aa90-9d62207ae538.json  f8cec940-24bd-4045-8833-459cb4f897ab.json  fb21bd00-0080-40e4-a43b-bbdfc7a5c20e.json
back/domain/example/container/: __init__.py  container.py
back/domain/myeolsal/: __init__.py
back/domain/orv/: __init__.py
back/domain/orv_v2/: LOGGING_GUIDE.md  __init__.py  config.py
back/domain/orv_v3/: __init__.py  config.py  narrator.py
back/scripts/: create_indexes.py
back/server/: __init__.py  app.py  config.py
back/server/api/: graph_routes.py
(+465 files in other folders)
